--- a/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/Views/Pedido/Carrossel.cshtml
+++ b/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/Views/Pedido/Carrossel.cshtml
@@ -1,4 +1,8 @@
-﻿@model List<Produto>;
+﻿@{
+    ViewData["Title"] = "Carrossel";
+}
+
+@model List<Produto>;
 <h3>Catálogo</h3>
 <div id="my-carousel" class="carousel slide" data-ride="carousel">
     <!-- Wrapper for slides -->
@@ -27,7 +31,9 @@
                                     <div class="produto-nome">@produto.Nome</div>
                                     <div><h4><strong>@produto.Preco.ToString("C")</strong></h4></div>
                                     <div class="text-center">
-                                        <a href="/" class="btn btn-success">Adicionar</a>
+                                        <a asp-action="carrinho"
+                                           asp-route-codigo="@produto.Codigo" 
+                                        class="btn btn-success">Adicionar</a>
                                     </div>
                                 </div>
                             </div>
