--- a/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
+++ b/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
@@ -27,7 +27,7 @@
     <div class="panel-body">
         @foreach (var item in Model)
         {
-            <div class="row row-center linha-produto">
+            <div class="row row-center linha-produto" item-id="@item.Id">
                 <div class="col-md-3">
                     <img class="img-produto-carrinho" src="/images/produtos/large_@(item.Produto.Codigo).jpg" />
                 </div>
@@ -43,7 +43,8 @@
                         <input type="text" value="@(item.Quantidade)"
                                class="form-control text-center" />
                         <span class="input-group-btn">
-                            <button class="btn btn-default">
+                            <button class="btn btn-default"
+                                    onclick="clickIncremento(this)">
                                 <span class="glyphicon-plus"></span>
                             </button>
                         </span>
@@ -51,7 +52,7 @@
                 </div>
                 <div class="col-md-2">
                     R$ <span class="pull-right" subtotal>
-                        @(item.Quantidade * item.PrecoUnitario)
+                        @((item.Quantidade * item.PrecoUnitario).ToString("F"))
                     </span>
                 </div>
             </div>
@@ -68,7 +69,7 @@
             </div>
             <div class="col-md-2">
                 Total: R$ <span class="pull-right" total>
-                    @(Model.Sum(i => i.Quantidade * i.PrecoUnitario))
+                    @(Model.Sum(i => i.Quantidade * i.PrecoUnitario).ToString("F"))
                 </span>
             </div>
         </div>
@@ -80,9 +81,21 @@
             <a class="btn btn-success" asp-action="carrossel">
                 Adicionar Produtos
             </a>
-            <a class="btn btn-success" asp-action="cadastro">
-                Preencher Cadastro
+            <a class="btn btn-success" asp-action="resumo">
+                Finalizar Pedido
             </a>
         </div>
     </div>
 </div>
+
+@section Scripts
+{
+    <script type="text/javascript">
+        function clickIncremento(btn) {
+            var linhaDoItem = $(btn).parents('[item-id]');
+            var itemId = $(linhaDoItem).attr('item-id');
+            var novaQtde = $(linhaDoItem).find('input').val();
+            debugger;
+        }
+    </script>
+}
