--- a/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
+++ b/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Carrinho";
 }
 
-@model IList<ItemPedido>;
+@model CarrinhoViewModel;
 
 <h3>Meu Carrinho</h3>
 <div class="panel panel-default">
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="panel-body">
-        @foreach (var item in Model)
+        @foreach (var item in Model.Itens)
         {
             <div class="row row-center linha-produto" item-id="@item.Id">
                 <div class="col-md-3">
@@ -42,7 +42,8 @@
                             </button>
                         </span>
                         <input type="text" value="@(item.Quantidade)"
-                               class="form-control text-center" />
+                               class="form-control text-center" 
+                               onblur="carrinho.updateQuantidade(this)"/>
                         <span class="input-group-btn">
                             <button class="btn btn-default"
                                     onclick="carrinho.clickIncremento(this)">
@@ -64,13 +65,13 @@
         <div class="row">
             <div class="col-md-10">
                 <span numero-itens>
-                    Total: @(Model.Count())
+                    Total: @(Model.Itens.Count())
                     itens
                 </span>
             </div>
             <div class="col-md-2">
                 Total: R$ <span class="pull-right" total>
-                    @(Model.Sum(i => i.Quantidade * i.PrecoUnitario).ToString("F"))
+                    @(Model.Total().ToString("F"))
                 </span>
             </div>
         </div>
