Atualizando itens da view

--- a/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
+++ b/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
@@ -71,7 +71,7 @@
             </div>
             <div class="col-md-2">
                 Total: R$ <span class="pull-right" total>
-                    @(Model.Total().ToString("F"))
+                    @(Model.Total.ToString("F"))
                 </span>
             </div>
         </div>
